--- a/Homework_1st.ipynb
+++ b/Homework_1st.ipynb
@@ -786,10 +786,9 @@
         "    Return \"int\" for whole numbers, \"float\" for decimals.\n",
         "    \"\"\"\n",
         "    # Your code here\n",
-        "    if number == int(number):\n",
-        "        return \"int\"\n",
-        "    else:\n",
-        "        return \"float\"\n",
+        "    type_list = ["int", "float"]
+             n = int(number % 1 != 0)
+             return type_list[n]
         "\n",
         "\n",
         "# Test cases\n",
